# talk-to-your-data

./: .gitignore  ASSIGNMENT.md  CLAUDE.md  README.md  install.md  justfile  skills-lock.json
.agents/skills/playwright-cli/: SKILL.md
.claude/skills/install/: SKILL.md
.claude/skills/red-team-agent/: SKILL.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  errors.py  main.py
backend/app/agent/: agent.py  tools.py
backend/app/data/: loader.py  sample_data.csv
backend/app/routes/: conversations.py  query.py
backend/evals/: benchmark.py  cases.yaml  evaluators.py  red_team_cases.yaml  red_team_evaluator.py  test_agent.py  test_red_team.py
backend/migrations/: 001_create_tables.sql  002_add_chart_column.sql  003_add_table_column.sql  004_add_pydantic_messages.sql
backend/tests/: conftest.py  test_conversations.py  test_db.py  test_errors.py  test_loader.py  test_query.py
docs/superpowers/plans/: 2026-03-24-data-agent-plan.md  2026-03-25-conversation-history-plan.md  2026-03-25-multi-model-benchmark.md  2026-03-25-streaming-thinking-actions.md
docs/superpowers/specs/: 2026-03-24-data-agent-design.md  2026-03-25-conversation-history-design.md  2026-03-25-multi-model-benchmark-design.md  2026-03-25-red-team-skill-design.md  2026-03-25-streaming-thinking-actions-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ChartImage.tsx  ChatInput.tsx  ChatMessage.tsx  CodeBlock.tsx  DataChart.tsx  DataTable.tsx  (+7 more)
(+8 files in other folders)
