[project]
name = "data-agent"
version = "0.1.0"
description = "Natural language data agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-ai>=0.2",
    "logfire[asyncpg,fastapi]>=4.0",
    "e2b-code-interpreter>=1.2",
    "pydantic-settings>=2.7",
    "pandas>=2.2",
    "asyncpg>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "pydantic-evals>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
